Bug fix for update game and changing game information

--- a/templates/GameRecords.html
+++ b/templates/GameRecords.html
@@ -141,7 +141,9 @@
             'Clank': 4,
             'Lords of Waterdeep': 5,
             'Moonrakers': 5,
-            'CosmicEncounter': 5
+            'Cosmic Encounter': 5, 
+            'Space Base': 5,
+            'Heat': 6
         };
 
         const Length = gameMaxLength[game];
