--- a/static/css/addGame.css
+++ b/static/css/addGame.css
@@ -215,3 +215,58 @@ input {
 input::placeholder {
     color: #787675; /* Your desired color */
 }
+
+#expansions{
+    width: 80%;
+    border-radius: 1px;
+    margin-left: 40px;
+}
+
+.expansionResults {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    z-index: 100;
+    background-color: #242526;
+    border: 1px solid black;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    max-height: 200px;
+    overflow-y: auto;
+    margin-left: 40px;
+    width: 80%;
+    top: 410px;
+    padding: 5px; 
+}
+
+.result-item {
+    flex-basis: 33.33%;  /* Change to 25% for 4 items per row */
+    box-sizing: border-box;
+    background-color: #404040;
+    border: 1px solid black;
+    border-radius: 3px;
+    cursor: pointer;
+    color: white;
+    padding: 3px 0px 3px 0px;
+}
+
+#taggedExpansions {
+    width: 80%;
+    margin-left: 40px;
+    margin-top: 10px;
+}
+
+#taggedExpansions div {
+    border: 1px solid #17a2b8;
+    color: #17a2b8;
+    padding: 3px;
+    border-radius: 3px;
+    display:inline;
+    cursor: default;
+    margin: 0px 3px 0px 3px
+}
+
+.removeExpansion:hover {
+    color: red;
+    cursor: pointer;
+}
