--- a/templates/addGame.html
+++ b/templates/addGame.html
@@ -311,7 +311,7 @@
                 form.appendChild(div);
             }
 
-            let gamesWithExpansions = ['Dominion', 'Lords of Waterdeep', 'Moonrakers', 'Catan'];
+            let gamesWithExpansions = ['Dominion', 'Lords of Waterdeep', 'Clank!', 'Moonrakers', 'Catan'];
 
             let outerExpansions = document.createElement('div');
             outerExpansions.style = 'display: flex; flex-direction: column; border-radius: 5px; !important';
