--- a/templates/addGame.html
+++ b/templates/addGame.html
@@ -245,7 +245,6 @@
         for (let i = 0; i < gameTitle.length; i++) {
             let titleText = gameTitle[i].textContent.trim();
             if(titleText.length > 19) {
-                console.log("higher");
                 gamePlayerCount[i].style = 'font-size: large; margin-top: 0px;'
             } 
         }
@@ -329,8 +328,13 @@
                 input.addEventListener('keyup', function() {
                     showResults(this.value, this.id);
                 });
+                let names = document.createElement('div');
+                names.id = `Player${i}Results`;
+                names.classList.add('res');
+                names.classList.add('Hide');
                 playersecion.appendChild(label);
-                playersecion.appendChild(input);   
+                playersecion.appendChild(input);
+                playersecion.appendChild(names);   
                 //creating the second label and score input
                 let playersecion2 = document.createElement('div');
                 playersecion2.classList.add('playerSection');
@@ -401,10 +405,8 @@
                 outerExpansions.classList.add('Hide');
             } else {
                 let currentHeight = parseInt(Popup.style.height) || Popup.offsetHeight;
-                console.log("Current height:", currentHeight);
                 let newHeight = currentHeight + 75;
                 Popup.style.height = newHeight + 'px';
-                console.log("New height:", Popup.style.height);
             }
 
             let button = document.createElement('button');
@@ -440,7 +442,7 @@
 
         function findExpansions(game, input) {
             const expansions = {
-                'Dominion': ['Dominion', 'Seaside', 'Intrigue', 'Prosperity', 'Hinterlands', 'Dark Ages', 'Adventures'],
+                'Dominion': ['Dominion', 'Seaside', 'Intrigue', 'Prosperity', 'Promo'],
                 'Moonrakers': ['Binding Ties', 'Nomad', 'Overload', 'The Shard', 'The Endless', 'Dark Matter', 'Starfall'],
                 'Lords of Waterdeep': ['Scoundrels of Skullport'],
                 'Clank!': ['Sunken Treasure', "The Mummy's Curse", 'Adventuring Party', 'Expeditions: Gold and Silk', 'Expeditions: Temple of the Ape Lords'],
@@ -460,7 +462,6 @@
 
         function showExpansions(val, game) {
             let res = document.querySelector('.expansionResults');
-            console.log(res)
             res.innerHTML = '';
             let list = '';
             if (val === '') {
@@ -475,9 +476,7 @@
             let selectedExpansions = document.querySelectorAll('.selectedExpansion');
 
             let selectedExpansionsArray = Array.from(selectedExpansions).map(el => el.textContent.trim());
-            console.log(terms);
             let filteredTerms = terms.filter(term => !selectedExpansionsArray.includes(term));
-            console.log(filteredTerms);
             for (i = 0; i < filteredTerms.length; i++) {
                 let resultItem = document.createElement('div');
                 resultItem.textContent = filteredTerms[i];
@@ -500,14 +499,11 @@
                     expansionnames.value = '';
                     let usedExpansions = document.querySelectorAll('.selectedExpansion')
                     for (let i = 0; i < usedExpansions.length; i++) {
-                        console.log(usedExpansions[i].innerHTML)
                         expansionnames.value += `${usedExpansions[i].innerHTML}`;
                         if (i < usedExpansions.length - 1) {
                             expansionnames.value += ', ';
                         }
                     }
-                    console.log('expansionnames.innerHTML');
-                    console.log(expansionnames.value);
                 });
             });
 
@@ -519,7 +515,6 @@
         }
 
         function createExpansion(expansionName){
-            console.log(expansionName.innerText, "Clicked!");
             let taggedExpansions = document.querySelector("#taggedExpansions");
             let tagContainer = document.createElement('div');
             let name = document.createElement('Span');
@@ -530,7 +525,6 @@
             close.classList.add('removeExpansion');
 
             close.addEventListener('click', () => {
-                console.log('clicked on remove');
                 close.parentNode.remove();
             })
 
@@ -552,46 +546,43 @@
         }
 
         function showResults(val, id) {
-            console.log(val);
-            console.log(id);
-            // let parts = id.split(/(\d+)/);
-            // let part = parts[0];
-            // let gameName = part.slice(0, -6);
-            // console.log("GAME");
-            // console.log(gameName);
-            // let index = id.search(/\d/);
-            // let num = id.substring(index);
-            // console.log(num);
-            // results = document.querySelectorAll(`.${gameName}results`);
-            // results[num - 1].classList.remove("Hide");
-            // let res = results[num - 1]
-            // res.innerHTML = '';
-            // let list = '';
-            // if (val === '') {
-            //     res.classList.add("Hide");
-            //     return;
-            // }
-            // let terms = autocompleteMatch(val);
-            // for (i=0; i<terms.length; i++) {
-            //     list += '<li>' + terms[i] + '</li>';
-            // }
-            // res.innerHTML = '<ul>' + list + '</ul>';
+            let parts = id.split(/(\d+)/);
+            let part = parts[0];
+            let gameName = part.slice(0, -6);
+            let index = id.search(/\d/);
+            let num = id.substring(index);
+            
+            results = document.querySelector(`#${id}Results`);
+            results.classList.remove("Hide");
+            let res = results;
+            res.innerHTML = '';
+            let list = '';
+            if (val === '') {
+                res.classList.add("Hide");
+                return;
+            }
+            let terms = autocompleteMatch(val);
+            for (i=0; i<terms.length; i++) {
+                list += '<li>' + terms[i] + '</li>';
+            }
+            res.innerHTML = '<ul>' + list + '</ul>';
 
-            // // Add event listener to each li element
-            // let liElements = document.querySelectorAll(`.${gameName}results li`);
-            // liElements.forEach(function(li) {
-            //     li.addEventListener('click', function() {
-            //         document.querySelector(`#${gameName}Player${num}`).value = li.innerText;
-            //         res.innerHTML = '';
-            //         res.classList.add("Hide");
-            //     });
-            // });
+            // Add event listener to each li element
+            let liElements = document.querySelectorAll(`.res li`);
+            liElements.forEach(function(li) {
+                li.addEventListener('click', function() {
+                    console.log('hellooooo world')
+                    document.querySelector(`#${gameName}Player${num}`).value = li.innerText;
+                    res.innerHTML = '';
+                    res.classList.add("Hide");
+                });
+            });
 
-            // document.addEventListener('click', function(event) {
-            //     if (!event.target.closest(`#${gameName}Player${num}`) && !event.target.closest(`.${gameName}results`)) {
-            //         res.classList.add("Hide");
-            //     }
-            // });
+            document.addEventListener('click', function(event) {
+                if (!event.target.closest(`#${gameName}Player${num}`) && !event.target.closest(`.${gameName}results`)) {
+                    res.classList.add("Hide");
+                }
+            });
 
         }
 
@@ -709,7 +700,6 @@
         }
 
         function showExpansion(){
-            console.log("adding expansion")
             let gameid = 59;
             fetch(`/retrieveExpansion?gameid=${gameid}`)
             .then(response => response.json())
