--- a/templates/profile.html
+++ b/templates/profile.html
@@ -71,9 +71,9 @@
                     <div class="section" id="favorites" style="width: 880px; margin-bottom: 200px;">
                         <div style="display: flex; flex-direction: row; justify-content: space-between;">
                             <h3>Favorite Games</h3>
-                            <!-- <div style="display: flex; flex-direction: row;">
+                            <div style="display: flex; flex-direction: row;">
                                 <button id="expandFavorites" class="btn-outline">Expand Favorites</button>
-                            </div> -->
+                            </div>
                         </div>
                         
                         
