--- a/templates/profile.html
+++ b/templates/profile.html
@@ -54,7 +54,7 @@
                         <div>
                             <h3>Stats</h3>
                             <div class="stat">
-                                <img class="icon" src="/static/images/bestfriend.PNG">
+                                <img class="icon" src="/static/images/bestfriend.png">
                                 <p style="margin-top: 14px;">Best Friend</p>
                                 <p style="font-family: 'Manolo Mono', sans-serif !important;">{{ profileStats[4] }}</p>
                             </div>
