--- a/templates/home.html
+++ b/templates/home.html
@@ -139,6 +139,7 @@
         <div id="popups"> </div>
 
         <script>
+            var STATIC_URL = "{{ url_for('static', filename='') }}";
             let page = 2;
             const contentContainer = document.getElementById('content-container');
             const loadingIndicator = document.getElementById('loading-indicator');
@@ -190,7 +191,7 @@
                                 <p class="gameName">${game.game_type}</p>
                             </div>
                         </div>
-                        <img src="/static/images/profile/joshpfp.png" class="profilePicture"> 
+                        <img src="${STATIC_URL}images/profile/${game.game_poster}pfp.png" class="profilePicture">
                     </div>
                     <div class="gameInformation">
                         <div class="podium">
